--- a/杂/性能优化.md
+++ b/杂/性能优化.md
@@ -10,3 +10,15 @@ webpack 性能
 HTTP 缓存带来的性能提升
 
 css 权重问题
+
+大数据处理方式：
+
+时间分片：
+定时器 setTimeout setInterval 16.6ms 在十秒内处理完成
+requireIdleCallback 它在渲染之后 所以最好不要操作 DOM ，低优先级
+requireAnimationFrame 它在渲染之前，最好操作 DOM 的时机，但不要处理太大量的数据，免得阻塞渲染 高优先级
+
+开启新线程，处理数据
+Worker
+
+https://zhuanlan.zhihu.com/p/39878259
