--- a/杂/重构.md
+++ b/杂/重构.md
@@ -63,7 +63,8 @@ componentDidUpdate
 componentWillUnmount
 
 纯函数 无副作用
-就是入参与出参一致
+就是相同的入参，得到相同的出参
+副作用，除了当前执行的函数外，对外部环境产生影响，如修改入参，外部变量，操作节点，打印等
 
 componentWillReceiveProps
 
@@ -73,6 +74,7 @@ type
 都可以描述对象或者函数
 都允许拓展 只是方式不一样 extends &
 
+区别
 type 基本类型，联合类型，元组等
 
 interface 声明合并
