--- a/杂/渲染.md
+++ b/杂/渲染.md
@@ -52,7 +52,7 @@
 
 ## 箭头函数
 
-箭头函数没有 this,arguments,new,super,不能用作构造函数，没有 prototype，函数生成器
+箭头函数没有自己的 this,arguments,new,super,不能用作构造函数，没有 prototype，函数生成器
 
 ## 原型
 
@@ -85,3 +85,39 @@ niginx
 后台代理 如 node
 
 其实是利用了不在客户端进行通信，而后使用同域转发到客户端的方式，因为跨域其实客户端的同源策略导致，其实请求已经发出来的，只是被客户端拦截下来的，无法响应
+
+## useEffect useLayoutEffect 区别
+
+## useMemo useCallback 区别
+
+## ajax 请求中断
+
+fetch xhr
+
+## 泛型
+
+Pick 实现
+
+约束或条件类型
+extends
+
+当它是三元表达式时
+条件类型
+T extends K ? never:K[T]
+
+否则为约束
+
+分布条件
+"abc"|"ccc"|"dd" extends K
+
+循环
+in
+
+获取属性 key
+keyof Abc
+
+获取定义
+typeof abc
+
+推断
+p:infer R
