--- a/杂/组件库.md
+++ b/杂/组件库.md
@@ -15,14 +15,169 @@
 
 ## 为什么需要组件库
 
-随着业务的发展，原来的项目可能不得不产生裂变，变成几个相似但各有不同的项目 -- 比如在初始项目中积累经验后，需要推广到相似的业态上或根据不同大客户的需求进行定制，这种情况下往往很难理想化的保持各项目大版本或者后续发展进度的同步，只能逐渐各自发展。这时那些在一开始显得八面玲珑的“可复用组件”，往往就需要手忙脚乱的在各个项目中分头维护，或是出现了意想不到的问题，需要重新规划了。
+随着业务的发展，原来的项目可能不得不产生裂变，变成几个相似但各有不同的项目 -- 比如在初始项目中积累经验后，需要推广到相似的产品上或当前产品兼容了好几个业务线，但随着业务的方面分叉越来越大，这种情况下往往很难理想化的保持各项目大版本或者后续发展进度的同步，只能逐渐各自发展。这时那些在一开始显得八面玲珑的“可复用组件”，需要修改组件达到需求点，但由于是在多个项目间都存在，这时就需要维护多套代码，导致开发的成本很大且不好把控，而这个时候就应该考虑抽离项目级的组件，达到可在各项目都能复用。
 
 # 搭建
 
-# 好用的组件库推荐
+从零开始搭建组件库，这是没有必要的，因为现在已经有很多优秀的工具了，如 storybook、docz、dumi、Styleguidist、father 等等
+
+而搭建一个组件库需要有以下的操作：
+
+1. 组件设计
+2. 代码规范检查
+3. 组件测试
+4. 文档化
+5. 打包
+6. 发布
+7. 部署站点
+
+而网上也有很多关于组件库的搭建例子，这里只是介绍一些工具的使用，而目前 docz 与 Styleguidist 都是为了组件文档化，而 storybook 的的能力就比较强大，它的理念是 CDD(组件驱动开发)，为了搭建一个组件平台的，dumi 一个基于 umi 打造的，为了组件开发场景而生的文档工具
+
+而以上的第一条是编写每个组件都需要了解的，是我们的核心，其余的可以根据需求场景进行选择使用。
 
 ## docz
 
+docz 是为了解决组件可视化的，它是基于 MDX，MDX 就是 Markdown + JSX，就是我们可以在 Markdown 里编写 JSX 代码，然后让它被展示出来
+
+docz 能把组件可视化，让大家都可以查阅这个组件是否合适，所以它两个重要的组件
+
+1. Playground 组件
+
+   需要使用它包含着我们需要展示的组件，为了让我们的组件能被渲染出来
+
+```
+---
+name: Button
+route: /
+---
+
+import { Playground } from 'docz'
+import { CustomComponent } from './CustomComponent'
+
+# Button
+
+## Basic usage
+
+<Playground>
+  <CustomComponent {...props}>这是我们需要展示的组件例子</CustomComponent>
+</Playground>
+```
+
+2. Props 组件
+   不需要额外的编写 API 说明文档，它使用组件内的 props 自动生成 API 文档，支持 prop-types 与 typescript
+
+Alert.tsx
+
+```tsx
+export interface AlertProps {
+  /**
+   * 描述...
+   * @default info
+   */
+  kind: "info" | "positive" | "negative" | "warning";
+}
+
+export const Alert: FC<AlertProps> = (props) => <div>{props.kind}</div>;
+```
+
+mdx
+
+```
+import { Playground, Props } from "docz";
+import { Alert } from "./Alert.tsx";
+## Properties
+
+<Props of={Alert} />
+```
+
+上手成本低，demo 需要在 mdx 内编写，可文档化，站点打包部署
+
+[docz 入门文档](https://www.docz.site/docs/getting-started)
+
 ## Styleguidist
 
-##
+一个组件开发环境，基于 JSDOC 可以帮助 react 项目快速构建项目文档，它列出了组件 propTypes 并显示了基于 Markdown 文件的实时、可编辑的使用示例。
+
+[入门文档](https://react-styleguidist.js.org/docs/getting-started)
+
+根据入门文档，可以直接在项目上集成组件文档展示，而它可上面的 docz 差不多，但 API 比较丰富，它可以根据 JSDoc 的能力，进行注释展示文档，比如我们使用 PropTypes 定义了入参，然后某些入参弃用了，不想在文档上展示，那么就可以`@ignore`标记
+
+还可以使用 JSDoc 别的标记，如弃用`@deprecated`、作者`@author`、参数`@param`等等
+
+[JSDoc 的使用手册](https://jsdoc.app/)
+
+根据上面的入门文档创建后默认直接读取`src/components`下的组件，而我们可以不需要在 md 上编写导入组件就可以直接导入同级目录下的组件
+
+如：
+在 src/components/Button 下新建两个文件：index.js、index.css、Readme.md，然后我们在 Readme.md 里直接使用组件编写文档即可
+
+不一定要起 Readme.md 名称，可以使用组件名称，如 Button.md，这样也是可以被解析
+
+```
+<Button>Push Me</Button>
+```
+
+当然它还有更多功能，具体可以查看[Documenting components](https://react-styleguidist.js.org/docs/documenting)
+
+在功能上比 docz 强大，docz 有的它也有，而还可以基于 jsDoc 注释生成文档，API 方面比 docz 灵活很多
+
+## storybook
+
+storybook 是一个组件开发工具，通过隔离组件，可以更快，更轻松地进行开发。
+
+它的理念是 CDD 组件驱动开发，让我们先有组件，在根据组件进行组合页面的，最大程度的提高复用
+
+而且组件的开发无需启动整个应用，可以达到最小开启，编译速度很快，开发体验最佳
+
+它还提供了可视化方式测试组件，还可对它进行功能扩展，达到刚需
+
+所以对它的定位是一个组件平台，提供组件所需的各种能力与扩展，不区分技术栈，都可在上面进行组件开发
+
+当我们需要对它进行定制化实现时它的成本会比较高，但它提供功能丰富的 addons 插件增强文档交互体验，社区成熟，可以在上面找解决方案，是一个很重的工具
+
+[storybook 入门文档](https://storybook.js.org/docs/react/get-started/install/)
+
+它是在现成的项目上直接安装的
+
+它提供了组件文档化、单元测试、文档构建、功能扩展等等的能力，但它为了灵活定制，导致它的使用成本相对会比较高
+
+而且支持 monorepo 的组件开发形式，是一个不区分技术栈，集多数能力于一身的工具
+
+就是它的主题很丑，需要自己去替换
+
+[storybook 例子](https://github.com/ComponentDriven/componentdriven.org/)
+
+[组件驱动的用户界面资料](https://www.componentdriven.org/)
+
+## dumi
+
+dumi 是一款为组件开发场景而生的文档工具，基于 umi 打造的，然后使用 father 提供组件打包，dumi 负责组件开发及组件文档生成
+
+它为开发者提供一站式的组件开发体验，不需要开发者使用各种工具搭建一个组件库，这是上面的工具所不能达到
+
+它在组件开发方面，开箱即用，可以让我们脱离繁琐搭建过程，注意力集中在组件编写和文档编写上，而且可以在 Markdown 上编写展示组件事例，可以直接在引入 demo 例子到 Markdown 上后展示组件并事例代码展示，这个很方便，就不需要编写很大的 Markdown 例子代码，自动生成 typescript API 文档，支持移动端组件库研发和 PC 端组件库研发，当然也可以自定义主题，移动端与 PC 端就是主题之一，还有其他的功能
+
+熟悉 umi 或者 DVA 的都知道它有自己的路由规则，而 dumi 也继承了 umi 的能力，所以可以理解为 dumi 就是一个工具集合二次封装的工具
+
+[dumi 入门文档](https://d.umijs.org/zh-CN/guide#%E5%BF%AB%E9%80%9F%E4%B8%8A%E6%89%8B)
+
+dumi 已经涵盖了代码规范检查、组件测试、文档化、组件打包、组件发布、部署站点
+
+虽然它最理想的开发生态是都是基于 umi 的项目，但在非 umi 项目也是可以使用的
+
+[非 umi 项目上集成例子](https://github.com/793338023/cra-components)
+
+[dumi，你崭新的 React 组件开发和文档编写利器！](https://zhuanlan.zhihu.com/p/110381664)
+
+如果使用 react 技术栈，想开箱即用，上手快速，我觉得 dumi 比之前的全面且易上手，是组件库研发的不错的选择，当然每个工具的选择都是根据当前所需的场景
+
+## 总结
+
+docz、Styleguidist、storybook 都是不错的组件文档选择，而在功能上 storybook 有它自己的一套理念与 API，在测试上也功能强大，但上手难度比较高，而它们都有一个问题就是只是组件研发中一个或某几个的环节，还是需要我们自己搭建组件研发库的
+
+而 dumi 是吸取了它们的优势然后简化它们的难度，符合当前组件开发所需，开箱即用的工具，我觉得它不好的地方就是它太年轻了，还在迅速发展，只支持 react
+但它的不好也无法掩盖掉它的优势---让 Demo 好写、又好用，一站式服务
+
+以上都没有把例子放出来，都在链接里
+
+# 组件设计
