--- a/杂/分支管理.md
+++ b/杂/分支管理.md
@@ -73,3 +73,22 @@ git branch --unset-upstream 1.7.0
 
 拉取代码
 git pull --rebase
+
+打标签，主要使用在版本上线，与分支区别在于tag是固定在某个提交的，静态的
+git tag -a 版本 -m 描述
+
+如
+git tag -a 0.0.1 -m 版本1
+
+tag需要单独提交
+
+git push origin tag版本
+如
+git push origin 0.0.1
+
+tag切换，tag代码是不能修改的，需要新切换一个分支开发，git checkout -b xxxx
+git checkout tag版本
+
+
+
+
