--- a/杂/分支管理.md
+++ b/杂/分支管理.md
@@ -10,32 +10,31 @@ hotfix bug 修复分支，看具体情况 MR 对应的 master 或 release
 分支合并过程
 
 feature -> release -> master
-hotfix -> release -> master
+hotfix -> master
 
 创建过程
 
 release -> feature
 master -> hotfix
 
-feature分支命名规范 
+feature 分支命名规范
 feature/版本/功能
 
 当然以上只供参考
 
-
 ## 提交规范
 
 feat：新功能（feature）
-fix：修补bug
+fix：修补 bug
 docs：文档（documentation）
 style： 格式（不影响代码运行的变动）
-refactor：重构（即不是新增功能，也不是修改bug的代码变动）
+refactor：重构（即不是新增功能，也不是修改 bug 的代码变动）
 test：增加测试
 chore：构建过程或辅助工具的变动
 
 ## 分支的拉取与切换
 
-1. 从预发布release分支直接切换新的功能分支
+1. 从预发布 release 分支直接切换新的功能分支
 
 ```
 git checkout release
@@ -48,7 +47,7 @@ git checkout -b feature/v1.222/abc
 git fetch origin
 
 // 查看远程所有的分支
-git branch -r 
+git branch -r
 
 git checkout -b dev(本地分支) origin/dev(远程分支)
 ```
@@ -74,21 +73,17 @@ git branch --unset-upstream 1.7.0
 拉取代码
 git pull --rebase
 
-打标签，主要使用在版本上线，与分支区别在于tag是固定在某个提交的，静态的
+打标签，主要使用在版本上线，与分支区别在于 tag 是固定在某个提交的，静态的
 git tag -a 版本 -m 描述
 
 如
-git tag -a 0.0.1 -m 版本1
+git tag -a 0.0.1 -m 版本 1
 
-tag需要单独提交
+tag 需要单独提交
 
-git push origin tag版本
+git push origin tag 版本
 如
 git push origin 0.0.1
 
-tag切换，tag代码是不能修改的，需要新切换一个分支开发，git checkout -b xxxx
-git checkout tag版本
-
-
-
-
+tag 切换，tag 代码是不能修改的，需要新切换一个分支开发，git checkout -b xxxx
+git checkout tag 版本
