--- a/杂/面试1.md
+++ b/杂/面试1.md
@@ -68,3 +68,14 @@ readyState
 scoket.io
 
 ## UDP
+
+## jsx
+
+https://www.zhihu.com/question/411745998
+
+## 虚拟 DOM
+
+https://www.cnblogs.com/Rivend/p/12630543.html
+
+fiber 与 stack
+https://segmentfault.com/a/1190000039682751
