--- a/杂/面试1.md
+++ b/杂/面试1.md
@@ -84,3 +84,7 @@ https://www.cnblogs.com/Rivend/p/12630543.html
 
 fiber 与 stack
 https://segmentfault.com/a/1190000039682751
+
+## 循环引用
+
+使用 cycle.js 工具判断，或者使用 WeakMap
